Changes in @NEW@:
  o Client Changes:
    * A signature callback has been added, which allows one to catch the
      troves with bad signatures and react appropriately (display an error
      message, lower trust level) (CNY-1008)

  o Build Changes:
    * The commitRelativeChangeset configuration item has been added
      to control whether Conary creates relative or absolute changesets
      when cooking.  It defaults to True, but can be changed to False
      to cause Conary to cook and commit absolute changesets. (CNY-912)
    * A list of X.org mirrors has been added to the default mirrors.
    * "cvc diff" now returns 2 on error, 1 if there are differences, and
      0 if there are no differences (CNY-938).

  o Bug Fixes
    * The build time is now displayed properly as "(unknown)" if a
      trove has no build time set. (CNY-990)
    * dbsh now properly loads the schema when one of the .show commands is
      executed. (CNY-1064)

Changes in 1.0.38:
  o Client Changes:
    * "conary help [command]" now displays the usage message for
      the command.
    * The --help options will now display a smaller number of flags by
      default, and more when the --verbose flag is added.
    * A getUpdateItemList() method has been added to the ConaryClient
      class.  It returns a list of top level troves on the local
      system. (CNY-1025)
    * "conary rq package:source --tags" will now show an "autosource"
      tag on autosourced files.
    * Conary now correctly uses "KB/s" instead of "Kb/s" when
      displaying transfer rates. (CNY-330)
    * conary rblist is now more readable, and supports --labels and
      --full-versions. (CNY-410)

  o Build Changes:
    * When using "cvc refresh" to refresh autosourced files, the
      refresh flag is now reset after the commit.  Previously, the
      file would continue to be refreshed on subsequent commits.
    * When using "cvc commit", cvc no longer downloads autosourced