@@ -15,6 +15,7 @@
 python_files=	    __init__.py		\
 		    cfg.py		\
 		    cfgtypes.py		\
+		    conarylogparse.py   \
 		    coveragehook.py	\
 		    enum.py		\
 		    debugger.py		\
