@@ -3,6 +3,8 @@ Changes in @NEW@:
     * A signature callback has been added, which allows one to catch the
       troves with bad signatures and react appropriately (display an error
       message, lower trust level) (CNY-1008)
+    * The conary.lib.conarylogparse module has been added to provide
+      parsed access to conary log files. (CNY-1075)
 
   o Build Changes:
     * The commitRelativeChangeset configuration item has been added
